--- a/bootstrap_truc.html
+++ b/bootstrap_truc.html
@@ -62,7 +62,7 @@
                 <img src="image/devices.png" />
             </section>
             <section>
-                <p>It is the #1 project on github with 65,000+ stars and over 23,000 forks</p>
+                <p>It is the #1 project on github with 95,000+ stars and over 42,000 forks</p>
                 <p>Bootstrap is an open source project on GitHub, meaning anyone can contribute to its progress.</p>
                 <img src="image/github.png" />
             </section>
@@ -71,12 +71,12 @@
             </section>
             <section>
                 <h2>What is a front-end framework?</h2>
-                <p>A front-end web development framework is simply a collection of production-ready HTML/CSS/JavaScript components that we can use in our designs.</p>
+                <p>A collection of production-ready HTML/CSS/JavaScript components that we can use in our designs.</p>
             </section>
             <section>
                 <h2>What is a front-end framework?</h2> 
-                <p>Keep in mind, Bootstrap is not just a CSS grid.</p>
-                <p>It also comes with tons of features that you can use to build a fully-functional website.</p>
+                <p>Bootstrap is not just a CSS grid.</p>
+                <p>Tons of features that you can use to build a fully-functional website.</p>
             </section>
 
             <section data-background="#f05b62">
@@ -84,7 +84,7 @@
             </section>
             <section>
                 <h2>Why would I want to use Bootstrap?</h2> 
-                <p>Bootstrap is designed to be responsive, which means that your HTML elements will respond to changes in screen size.</p>
+                <p>Bootstrap is designed to be responsive - your HTML elements will respond to changes in screen size.</p>
             </section>
             <section>
                 <p>So this desktop design:</p>
@@ -120,16 +120,16 @@
 	                <img src="image/bootstrap-files.png">
             </section>
             <section>
-	                <h2>Base CSS:</h2>
-	                <p>Styles for common HTML elements, including the grid system, typography, tables, forms, and buttons.</p>
+	                <h2>Layout:</h2>
+	                <p>Options for structuring your pages with Bootstrap, including global styles, required scaffolding, grid system, and more.</p>
             </section>
             <section>
-	                <h2>Components:</h2>
-	                <p>Styles for common user interface elements, like tabs & pills, breadcrumbs, navigation bars, alerts, page headers, and more.</p>
+	                <h2>Content:</h2>
+	                <p>Styles for displaying content with some of the most commonly used HTML elements, including normalization, typography, images, tables, and more.</p>
             </section>
             <section>
-	                <h2>JavaScript Plugins:</h2>
-	                <p>Similar to components, Bootstrap uses JavaScript plugins for tooltips, popovers, carousels, modal windows, and other elements</p>
+                    <h2>Components:</h2>
+                    <p>Over a dozen reusable components built to provide buttons, dropdowns, input groups, navigation, alerts, and much more.</p>
             </section>
             <section>
                     <h2>See it in action!</h2>
