--- a/exercises/hero/hero_instructions.html
+++ b/exercises/hero/hero_instructions.html
@@ -9,15 +9,15 @@
   <body>
     <div class="container">
         <h1>Bootstrap: Hero Homepage Exercise</h1>
-        <p>The goal of this exercise is to use the CSS classes and componenets from <a href="http://v4-alpha.getbootstrap.com">Bootstrap</a> to lay out a homepage for your website.
+        <p>The goal of this exercise is to use the CSS classes and components you've learned so far from <a href="http://v4-alpha.getbootstrap.com">Bootstrap</a> to lay out a homepage for your website.
 
         <h3>Part 1: Navigation, Jumbrotron</h3>
         <p>Download the <a href="hero_starter.html">starter code</a> by right clicking and saving the file to your computer.</p>
 
         <h5>Add navigation</h5>
         <ul>
-          <li>Use the <a href="http://v4-alpha.getbootstrap.com/components/jumbotron/">navigation</a> component to create navigation for your website. You can make</li>
-          <li></li>
+          <li>Use the <a href="http://v4-alpha.getbootstrap.com/components/navbar/">navbar</a> component to create a navigation header for your website. You can experiment with different positioning and layout, whatever strikes your fancy.</li>
+          <li>Use the <a href="http://v4-alpha.getbootstrap.com/components/navs/">nav</a> component to add a footer with social media links to your email, LinkedIn profile, GitHub profile, or more.</li>
         </ul>
 
         <h5>Make a splash with the jumbotron</h5>
@@ -34,7 +34,11 @@
             <li>Bonus: Set a large background "hero" image</li>
         </ul>
 
-
+        <h5>Bonus: </h5>
+        <ul>
+            <li>As a stretch goal to keep practicing using Bootstrap components.</li>
+            <li>Add a carousel</li>
+        </ul>
 
   <button class="btn" onclick="showSolution();">Show Solution</button>
 
