--- a/exercises/hero/hero_solution.html
+++ b/exercises/hero/hero_solution.html
@@ -4,17 +4,20 @@
         <meta charset="utf-8">
         <title>Grid</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" 
               integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-          <link rel="stylesheet" href="hero.css" />
+        <link rel="stylesheet" href="hero_solution.css" />
 
     </head>
 
     <body>
-      <nav class="navbar navbar-light bg-faded">
+      <nav class="navbar navbar-dark navbar-full">
         <ul class="nav navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">GirlDevelopIt <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Girl Develop It <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
@@ -28,32 +31,48 @@
         </ul>
       </nav>
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img src="https://placekitten.com/200/300" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img data-src="http://placebear.com/g/300/200" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img data-src=""http://placedog.com/g/300/200" alt="Third slide">
-    </div>
-  </div>
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="icon-prev" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="icon-next" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+      <div class="jumbotron">
+        <h1>Girl Develop It</h1>
+        <p class="lead">Girl Develop It is a nonprofit organization that exists to provide affordable and judgment-free opportunities for women interested in learning web and software development. Through in-person classes and community support, Girl Develop It helps women of diverse backgrounds achieve their technology goals and build confidence in their careers and their every day lives.</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+      </div>
+
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <img src="https://placekitten.com/200/300" class="img-fluid" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img src="https://placekitten.com/200/300" class="img-fluid" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img src="https://placekitten.com/200/300" class="img-fluid" alt="Third slide">
+          </div>
+        </div>
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="icon-prev" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="icon-next" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+<footer>
+  <nav class="nav nav-inline">
+    <a class="nav-link active" href="#">Active</a>
+    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">Another link</a>
+  </nav>
+</footer>
+
 
     </body>
 </html>
