--- a/exercises/hero/hero_starter.html
+++ b/exercises/hero/hero_starter.html
@@ -4,12 +4,20 @@
         <meta charset="utf-8">
         <title>Homepage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" 
               integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
         <link rel="stylesheet" href="hero.css" />
     </head>
 
     <body>
+      <!-- Navigation -->
+      <a href="#">Home</a>
+      <a href="#">Second Page</a>
+      <a href="#">Third Page</a>
+
       <!-- You'll be wrapping this content into a jumbotron, and adding more classes -->
       <div>
         <p>Welcome! or some snazzy tagline</p>
