--- a/github.html
+++ b/github.html
@@ -70,45 +70,6 @@ Download Github Desktop app
 					</ul>
 				</section>
 
-				<section> 
-					<h2>Example Flow A</h2>
-				     <p>Alice creates this code and commits it as version 0:</p>
-<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-function addTwo(num) {
-  return num + 2;
-}
-</code></pre>
-<p>Alice edits and commits as version 1:</p>
-<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-function addThree(num) {
-  return num + 3;
-}
-</code></pre> 
-				</section>
-
-				<section> 
-					<h2>Example Flow B</h2>
-					<p>Bob pulls the code from version 0 and edits:</p>
-<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-function addTwo(num) {
-  if (num == Infinity) {
-    alert("Cant add to infinity!");
-  }
-  return num + 2;
-}
-</code></pre>
-<p>Bob pulls in Alice's updates (version 1) and the VCS merges:</p>
-<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-function addThree(num) {			// Alice v1
-  if (num == Infinity) {			// Bob update to v0
-    alert("Cant add to infinity!");	// Bob update to v0
-  }					// Bob update to v0
-  return num + 3;				// Alices v1
-}
-</code></pre> 
-<p>Bob pushes the merged code above (version 2).</p>
-
-				</section>
  
  				<section> 
 					<h2>Centralized vs Distributed</h2>
@@ -217,6 +178,100 @@ function addThree(num) {			// Alice v1
             <li>Everyone has a local copy of the history</li>
           </ul>
         </section>
+
+        <section>
+          <h2>Workflow</h2>
+          <ul>
+            <li>Branch</li>
+            <li>Add, edit, delete, commit</li>
+            <li>Open a pull request</li>
+            <li>Review &amp; discuss</li>
+            <li>Deploy</li>
+            <li>Merge</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Repo</h2>
+          <p>A <strong>repository</strong> is usually used to organize a single project. Repositories can contain folders and files, images, videos, spreadsheets, and data sets – anything your project needs. We recommend including a README, or a file with information about your project.</p>
+        </section>
+
+        <section>
+          <h2>Branch</h2>
+          <p>When you create a branch in your project, you're creating an environment where you can try out new ideas.</p>
+          <p>Changes you make on a branch don't affect the master branch.</p>
+        </section>
+
+        <section>
+          <h2>Add, edit, delete, commit</h2>
+          <p>Whenever you add, edit, or delete a file, you're making a commit, and adding them to your branch.</p>
+          <p>Each commit has an associated commit message, helpful for others to understand your code.</p>
+          <p>Each commit is a separate unit of change, letting you roll back changes.</p>
+        </section>
+
+        <section>
+          <h2>Exercise!</h2>
+          <ol>
+            <li>Create your own repo.</li>
+            <li>Commit pages/content from Day 1.</li>
+            <li>Push into repo.</li>
+          </ol>
+        </section>
+
+        <section>
+          <h2>Open a pull request</h2>
+          <p>Pull Requests initiate discussion about your commits.</p>
+          <p>You can open a Pull Request at any point during the development process.</p>
+        </section>
+
+        <section>
+          <h2>Review &amp; discuss</h2>
+          <p>Pull Requests are designed to encourage and capture discussion to make your code great.</p>
+          <p>If someone comments that there is a bug, you can fix it in your branch and push up the change.</p>
+          <p>GitHub will show your new commits and any additional feedback.</p>
+        </section>
+
+        <section>
+          <h2>Deploy</h2>
+          <p>Deploy your changes to verify them in production.</p>
+          <p>If your branch causes issues, you can roll it back by deploying the existing master into production.</p>
+        </section>
+
+        <section>
+          <h2>Merge</h2>
+          <p>Merge your code with the master branch!</p>
+          <p>Once merged, Pull Requests preserve a record of the historical changes to your code.</p>
+        </section>
+
+        <section>
+          <h2>Exercise!</h2>
+          <ol>
+            <li>Fork and clone our <a href="">student directory repo</a>.</li>
+            <li>Create your own branch.</li>
+            <li>Locally edit and commit your changes.</li>
+            <li>Make a pull request!</li>
+          </ol>
+        </section>
+
+        <section>
+          <h2>Let's put our pages on Github Pages!</h2>
+        </section>
+
+        <section>
+          <h2>Github Pages</h2>
+          <ul>
+            <li>Public webpages hosted and published through Github</li>
+            <li>Designed to host your personal, organization, or project pages directly from a GitHub repository</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Create a gh-pages branch</h2>
+          <p>Go to your existing repository.</p>
+          <p>Click the branch drop-down on the left-hand side.</p>
+          <p>Type in "gh-pages" and press enter.</p>
+        </section>
+
         <!-- Installation and Setup-->
         <section>
           <section>
@@ -273,6 +328,7 @@ $ git config --list
             </code></pre>
           </section>
         </section>
+
         <!-- First commands-->
         <section>
           <section>
