--- a/hosting.html
+++ b/hosting.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Bootstrap Workshop at Girl Develop It</title>
+		<title>Web Hosting Workshop at Girl Develop It</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -14,16 +14,17 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
-
-		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+	    <link rel="stylesheet" href="css/reveal.css">
+	    <link rel="stylesheet" href="css/theme/simple.css" id="theme">
+	    <link rel="stylesheet" href="css/custom.css">
+	    <link rel="stylesheet" href="lib/css/dark.css">
+	    <link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
 		<script>
 			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
 		</script>
+
 
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
@@ -39,12 +40,154 @@
 			<div class="slides">
 				<section>
 					<h1>Hosting</h1>
-					<h3>Web design yay</h3>
-					<p>Slides : http://permalink.com</p>
-					<p></a>
 					</p>
 				</section>
-				<!-- 1 -->
+
+                <section>
+                    <h2>So... you made yourself a website in HTML class?</h2>
+                        <br/>
+                        <h3 class="fragment">Congratulations!</h3>
+                        <br/>
+                        <p class="fragment">But... now what?</p>
+                </section>
+
+                <section>
+                    <h2>What we'll cover</h2>
+                    <ul>
+                        <li class="fragment">Hosting: how a file on your computer becomes a public website 
+                        </li>
+                        <li class="fragment">Components of hosting and website architecture
+                        </li>
+                        <li class="fragment">Options and tradeoffs of various hosting providers
+                        </li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Your local development environment</h2>
+                    <ul>
+                        <li class="fragment">So far, you've been creating and opening "local" files in this workshop</li>
+                        <li class="fragment">It's just a file living on your computer</li>
+                        <li class="fragment">You can tell from the address bar whether a file is local <code>C://My Documents</code>, <code>file:///Users/me</code></li>
+                        <li class="fragment"><strong>The goal of setting up hosting</strong> is to get those files to a place where anyone can see it</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Can that place be your computer?</h2>
+                    <ul>
+                        <li class="fragment">By default, random people on the internet can't access your computer</li>
+                        <li class="fragment">You can give them permissions though</li>
+                        <li class="fragment">Example: you can set up a webserver on your computer</li>
+                        <li class="fragment">Downside: your files are inaccessible when your computer is off</li>
+                        <li class="fragment">Common solution: put your files on another server that stays on</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Enter: Hosting</h2>
+                    <ul>
+                        <li class="fragment">Hosting: a place where you can put your files, made accessible via a server being run on a computer someplace else, managed by someone else</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Example: Gmail</h2>
+                    <ul>
+                        <li class="fragment">When you check your Gmail, you see your Inbox</li>
+                        <li class="fragment">Your browser fetched this page and your emails from another machine hosting the files</li>
+                        <li class="fragment">From a server, managed by Google</li>
+                    </ul>
+                </section>
+
+	            <section>
+                    <h2>Example: Wordpress</h2>
+                    <ul>
+                        <li class="fragment">When you create a website on wordpress.com</li>
+                        <li class="fragment">Your website files are running on a server somewhere else</li>
+                        <li class="fragment">From a server, managed by Wordpress</li>
+                    </ul>
+                </section>  
+
+                <section>
+                    <h2>The World Wide Web</h2>
+                    <img src="image/client-server.png" alt="" />
+                </section>
+
+                <section>
+                    <h3>Home and daily life of a web site</h3>
+                    <p class="left-align">A typical website lives on a web server. Web servers are often large computers connected to a network.</p>
+                    <ul>
+                        <li class="fragment">Type a web address into the address bar</li>
+                        <li class="fragment">DNS connects you to the hosting server</li>
+                        <li class="fragment">Files are then sent back to your computer for display</li>
+                        <li class="fragment">Sometimes code must be compiled before being sent back to you.</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Example: twitter</h3>
+                    <div style="width: 100%; ">
+                        <img src="image/browser-request.png" alt="" />
+                    </div>
+                </section>
+                <section>
+                    <h3>Clients vs. Servers</h3>
+                    <div class="left-align">
+                        <p class="fragment">Clients make requests, servers fulfill them (usually).</p>
+                        <p class="fragment">Requests are like questions: clients ask them, and servers answer them. </p>
+                        <p class="fragment">For our web discussions, client = browser.</p>
+                        <p class="fragment">While any type of computer can be used as a server, they are generally larger and more powerful than others.</p>
+                        <p class="fragment">Client applications run on a client machine that you are interacting with (like your browser)</p>
+                        <p class="fragment">Server applications run on a machine someplace else, that your client or client application can talk to</p>
+                    </div>
+                </section>
+
+                <section>
+                    <h3>Hosting your client application</h3>
+                    <div class="left-align">
+                        <p class="fragment">Your index.html and style.css files are client code.</p>
+                        <p class="fragment">After your web browser loads them up, they are run by your web browser to display your page.</p>
+                        <p class="fragment">To make it so that anyone's browser can load them up, we will put them on a computer somewhere else (the host)</p>
+                        <p class="fragment">A server on that computer somewhere else will be the gatekeeper that lets anyone's browser load up your files (the client code)</p>
+                        <p class="fragment">In this example, your code is the client code, and the server only acts as a gatekeeper</p>
+                    </div>
+                </section>
+
+                <section>
+                    <h2>So, which hosting provider should I use</h2>
+                </section>
+
+                <section>
+                    <h3>Types of Hosting Providers</h3>
+                    <ul>
+                        <li class="fragment">File stores: a place to put files; Example: S3, Github Pages, Dropbox</li>
+                        <li class="fragment">Package Providers: a place where you can get a domain name, optional preinstalled software; Example: wordpress.org, bluehost.com
+                        </li>
+                        <li class="fragment">Roll your own: a place where you can set up and manage all the website components on your own, including databases, servers, domain names, etc. Example: EC2, Heroku, Linode, Digital Ocean</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>When to use them?</h3>
+                    <ul>
+                        <li class="fragment">File stores: when you just need to make static files available</li>
+                        <li class="fragment">Packages: when you need a cheap way to roll out a whole website (for a small business for example), and need everything to "just work" but dont need customization
+                        </li>
+                        <li class="fragment">Roll your own: when your software or business dictates you need full control; for example, most tech companies build their own website architectures and hosting solutions</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Tradeoffs</h3>
+                    <ul>
+                        <li class="fragment">File stores: good for static pages or client applications, insufficient for server applications</li>
+                        <li class="fragment">Packages: good for people who want to create and manage content, frustrating for techies who want more control or want to use software components not on the "allowed" list
+                        </li>
+                        <li class="fragment">Roll your own: more time consuming, need to be a techie to implement and maintain, but full control, ability to deploy/host any kind of client or server application, often cheaper</li>
+                    </ul>
+                </section>
+
 				<section>
 					<h2>Domain hosting</h2>
 					<ul>
@@ -53,10 +196,6 @@
 						<li>DNS</li>
 						<li>Registrars</li>
 					</ul>
-
-					<aside class="notes">
-					What is it? Responsive framework.
-					</aside>
 				</section>
 
 				<section>
@@ -110,116 +249,6 @@
 						<li>ICANN Accredited</li>
 					</ul>
 					<p>Popular registrars: GoDaddy, NameCheap, Google Apps</p>	
-				</section>
-
-				<section>
-					<h2>Workflow</h2>
-					<ul>
-						<li>Branch</li>
-						<li>Add, edit, delete, commit</li>
-						<li>Open a pull request</li>
-						<li>Review &amp; discuss</li>
-						<li>Deploy</li>
-						<li>Merge</li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>Repo</h2>
-					<p>A <strong>repository</strong> is usually used to organize a single project. Repositories can contain folders and files, images, videos, spreadsheets, and data sets – anything your project needs. We recommend including a README, or a file with information about your project.</p>
-				</section>
-
-				<section>
-					<h2>Branch</h2>
-					<p>When you create a branch in your project, you're creating an environment where you can try out new ideas.</p>
-					<p>Changes you make on a branch don't affect the master branch.</p>
-				</section>
-
-				<section>
-					<h2>Add, edit, delete, commit</h2>
-					<p>Whenever you add, edit, or delete a file, you're making a commit, and adding them to your branch.</p>
-					<p>Each commit has an associated commit message, helpful for others to understand your code.</p>
-					<p>Each commit is a separate unit of change, letting you roll back changes.</p>
-				</section>
-
-				<section>
-					<h2>Exercise!</h2>
-					<ol>
-						<li>Create your own repo.</li>
-						<li>Commit pages/content from Day 1.</li>
-						<li>Push into repo.</li>
-					</ol>
-				</section>
-
-				<section>
-					<h2>Open a pull request</h2>
-					<p>Pull Requests initiate discussion about your commits.</p>
-					<p>You can open a Pull Request at any point during the development process.</p>
-				</section>
-
-				<section>
-					<h2>Review &amp; discuss</h2>
-					<p>Pull Requests are designed to encourage and capture discussion to make your code great.</p>
-					<p>If someone comments that there is a bug, you can fix it in your branch and push up the change.</p>
-					<p>GitHub will show your new commits and any additional feedback.</p>
-				</section>
-
-				<section>
-					<h2>Deploy</h2>
-					<p>Deploy your changes to verify them in production.</p>
-					<p>If your branch causes issues, you can roll it back by deploying the existing master into production.</p>
-				</section>
-
-				<section>
-					<h2>Merge</h2>
-					<p>Merge your code with the master branch!</p>
-					<p>Once merged, Pull Requests preserve a record of the historical changes to your code.</p>
-				</section>
-
-				<section>
-					<h2>Exercise!</h2>
-					<ol>
-						<li>Fork and clone our <a href="">student directory repo</a>.</li>
-						<li>Create your own branch.</li>
-						<li>Locally edit and commit your changes.</li>
-						<li>Make a pull request!</li>
-					</ol>
-				</section>
-
-				<section>
-					<h2>Let's put our pages on Github Pages!</h2>
-				</section>
-
-				<section>
-					<h2>Github Pages</h2>
-					<ul>
-						<li>Public webpages hosted and published through Github</li>
-						<li>Designed to host your personal, organization, or project pages directly from a GitHub repository</li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>Create a gh-pages branch</h2>
-					<p>Go to your existing repository.</p>
-					<p>Click the branch drop-down on the left-hand side.</p>
-					<p>Type in "gh-pages" and press enter.</p>
-				</section>
-
-				<section>
-					<h2>That's it!</h2>
-					<p>To go<br/>
-						<code>http://[username].github.io/[repository]</code><br/>
-						to see your live Github page.</p>
-				</section>
-
-				<section>
-					<h2>Resources</h2>
-					<ul>
-						<li>stuff</a></li>
-						<li>stuff</li>
-						<li>stuff</li>
-						<li>stuff</li>
-					</ul>
 				</section>
 
 				<section>
