--- a/exercises/contact/contact_solution.html
+++ b/exercises/contact/contact_solution.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" 
               integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-        <link rel="stylesheet" href="contact_solution.css" />
+        <link rel="stylesheet" href="main.css" />
 
     </head>
 
@@ -31,10 +31,10 @@
         </ul>
       </nav>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="col-md-6">
-      <h3>Contact me</h3>
+    <div class="col-lg-6">
+      <h3>Contact Me</h3>
       <p>If you would like to contact me, please fill out this form.</p>
       <form>
         <fieldset class="form-group">
