--- a/exercises/hero/hero_instructions.html
+++ b/exercises/hero/hero_instructions.html
@@ -12,7 +12,7 @@
         <p>The goal of this exercise is to use the CSS classes and components you've learned so far from <a href="http://v4-alpha.getbootstrap.com">Bootstrap</a> to lay out a homepage for your website.
 
         <h3>Part 1: Navigation, Jumbrotron</h3>
-        <p>Download the <a href="hero_starter.html">starter code</a> by right clicking and saving the file to your computer.</p>
+        <p>Download the <a href="hero_starter.html">starter code</a> by right clicking and saving the file to your computer. Save the file as <strong>index.html</strong></p>
 
         <h5>Add navigation</h5>
         <ul>
@@ -43,7 +43,7 @@
   <button class="btn" onclick="showSolution();">Show Solution</button>
 
    <div id="solution" style="display:none; margin-top: 20px;">
-   <a href="grid_solution.html" target="_blank">View Solution in New Window</a>
+   <a href="hero_solution.html" target="_blank">View Solution in New Window</a>
    </p>
 
     <script>
