Cleaned up exercise slides

--- a/bootstrap_2.html
+++ b/bootstrap_2.html
@@ -112,9 +112,9 @@
 </section>
 
             <section data-background="#f05b62">
-                <h2><a  style="color: #ffffff;" href="exercises/hero/hero_instructions.html">
+                <h2><a style="color: #ffffff;" href="exercises/hero/hero_instructions.html" target="_blank">
                     Exercise Time:
-                    Homepage Part 1
+                    Homepage
                     </a>
                 </h2>
 
@@ -188,19 +188,8 @@
                     </iframe>   
                 </section>
 
-                <section>
-                    <h2>Exercise: Contact Me form</h2>
-                    <p>Add a contact form to your website so that your visitors may reach you.</p>
-                    <p>Inputs to consider:</p>
-                    <ul>
-                        <li>Name</li>
-                        <li>Email</li>
-                        <li>Subject</li>
-                        <li>Message</li>
-                        <li>Send button</li>
-                    </ul>
-                    <iframe height='266' scrolling='no' src='//codepen.io/mjawili/embed/mPaBEY/?height=266&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/mPaBEY/'>alerts</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
-                    </iframe>
+                <section data-background="#f05b62">
+                    <h2><a style="color: #ffffff;" href="exercises/contact/contact_instructions.html" target="_blank">Exercise: Contact Me form</a></h2>
                 </section>
 
                 <section>
