--- a/bootstrap_2.html
+++ b/bootstrap_2.html
@@ -206,18 +206,16 @@
                     <p>Copy content from earlier...</p>
                 </section>
 
-                <section>
-                    <h2>Exercise!</h2>
-                    <p>Create a gallery or portfolio of your work (or anything else that interests you).</p>
-                    <p>Utilize a three-column grid layout and cards to organize your content.</p>
+
+                <section data-background="#f05b62">
+                    <h2><a style="color: #ffffff;" href="exercises/gallery/gallery_instructions.html" target="_blank">Exercise: Gallery</a></h2>
                 </section>
 
-			
-			<section>
-			<h2>Bootstrap Usage and Tips</h2>
-			<p>Before you start creating custom CSS for your design, check the Bootstrap documentation to see if they've already created a class that does what you want.</p>
-			<p>Always be reusing, check if other developers have created a Bootstrap plugin you can leverage</p>	
-			</section>
+            <section>
+            <h2>Bootstrap Usage and Tips</h2>
+            <p>Before you start creating custom CSS for your design, check the Bootstrap documentation to see if they've already created a class that does what you want.</p>
+            <p>Always be reusing, check if other developers have created a Bootstrap plugin you can leverage</p>	
+            </section>
             
             <section>
             <h2>Customize Bootstrap</h2>
