--- a/hosting.html
+++ b/hosting.html
@@ -39,8 +39,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Hosting</h1>
-					</p>
+					<h1>Web Hosting</h1>
 				</section>
 
                 <section>
