--- a/bootstrap_2.html
+++ b/bootstrap_2.html
@@ -177,7 +177,7 @@
                 <section>
                     <h2>Modals</h2>
                     <p>Modals are prettier versions of dialog prompts!</p>
-                    <iframe height='266' scrolling='no' src='//codepen.io/mjawili/embed/dMwVYg/?height=266&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/dMwVYg/'>modals</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
+                    <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/yJOKYO/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/yJOKYO/'>modals</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
 
@@ -200,12 +200,6 @@
                     <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/dMwVYg/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/dMwVYg/'>Cards</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
-
-                <section>
-                    <h2>Grid Review</h2>
-                    <p>Copy content from earlier...</p>
-                </section>
-
 
                 <section data-background="#f05b62">
                     <h2><a style="color: #ffffff;" href="exercises/gallery/gallery_instructions.html" target="_blank">Exercise: Gallery</a></h2>
