Fixed Contact Form exercise starter and solution
Corrected input type for Name and Subject fields.
Added form action and method.

--- a/exercises/contact/contact_starter.html
+++ b/exercises/contact/contact_starter.html
@@ -1,11 +1,11 @@
-<form>
+<form action="mailto:mj@mjawili.com" method="get">
   <fieldset>
-    <label for="name">Name</label>
-    <input type="email" id="name" placeholder="Enter name">
+    <label for="subject">Subject</label>
+    <input type="text" id="subject" name="subject">
   </fieldset>
   <fieldset>
     <label for="message">Message</label>
-    <textarea id="message" rows="3"></textarea>
+    <textarea id="message" name="body" rows="3"></textarea>
   </fieldset>
   <button type="submit">Submit</button>
 </form>
