--- a/exercises/contact/contact_solution.html
+++ b/exercises/contact/contact_solution.html
@@ -36,10 +36,10 @@
     <div class="col-lg-6">
       <h3>Contact Me</h3>
       <p>If you would like to contact me, please fill out this form.</p>
-      <form>
+      <form action="mailto:mj@mjawili.com" method="get">
         <fieldset class="form-group">
           <label for="name">Name</label>
-          <input type="email" class="form-control" id="name" placeholder="Enter name">
+          <input type="text" class="form-control" id="name" placeholder="Enter name">
         </fieldset>
         <fieldset class="form-group">
           <label for="email">Email address</label>
@@ -48,11 +48,11 @@
         </fieldset>
         <fieldset class="form-group">
           <label for="subject">Subject</label>
-          <input type="email" class="form-control" id="subject" placeholder="Subject">
+          <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
         </fieldset>
         <fieldset class="form-group">
           <label for="message">Message</label>
-          <textarea class="form-control" id="message" rows="3"></textarea>
+          <textarea class="form-control" id="message" name="body" rows="3"></textarea>
         </fieldset>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
