Cleaned up Hosting

--- a/hosting.html
+++ b/hosting.html
@@ -85,9 +85,7 @@
 
                 <section>
                     <h2>Enter: Hosting</h2>
-                    <ul>
-                        <li class="fragment">Hosting: a place where you can put your files, made accessible via a server being run on a computer someplace else, managed by someone else</li>
-                    </ul>
+                    <p>Hosting: a place where you can put your files, made accessible via a server being run on a computer someplace else, managed by someone else</p>
                 </section>
 
                 <section>
@@ -181,42 +179,34 @@
 				</section>
 
 				<section>
-					<h2>IP Addresses</h2>
-					<p>Internet Protocol address: The address that computers use to identify one another online, usually arranged into four sets of digits - i.e., 12.34.56.78.</p>
-					<p>Look up your IP address by entering "ip address" in Google.</p>
+					<h2>Internet Protocol (IP) Addresses</h2>
+					<p>Used by computers to identify one another online, usually arranged into four sets of digits.</p>
+					<p>Look up your IP address by simply going to <a href="https://whatismyipaddress.com" target="_blank">whatismyipaddress.com</a>.</p>
 				</section>
 
 				<section>
 					<h2>Domains</h2>
 					<div>
-						<span style="color: red;">[subdomain]</span>.
-						<span style="color: green;">[domain]</span>.
-						<span style="color: blue;">[topleveldomain]</span>
+						<code><span style="color: red;">[subdomain]</span>.<span style="color: green;">[domain]</span>.<span style="color: blue;">[topleveldomain]</span></code>
 					</div>
 					<ul>
 						<li>
-							<span style="color: red;">maps</span>.
-							<span style="color: green;">google</span>.
-							<span style="color: blue;">com</span>
+							<code><span style="color: red;">maps</span>.<span style="color: green;">google</span>.<span style="color: blue;">com</span></code>
 						</li>
 						<li>
-							<span style="color: red;">www</span>.
-							<span style="color: green;">whitehouse</span>.
-							<span style="color: blue;">gov</span>
+							<code><span style="color: red;">www</span>.<span style="color: green;">whitehouse</span>.<span style="color: blue;">gov</span></code>
 						</li>
 						<li>
-							<span style="color: red;">www</span>.
-							<span style="color: green;">ontario</span>.
-							<span style="color: blue;">coop</span>
+							<code><span style="color: red;">www</span>.<span style="color: green;">ontario</span>.<span style="color: blue;">coop</span></code>
 						</li>
 					</ul>
-					<p>As .com, .net, and .org use isn't restricted, they are used more flexibly than as originally intended.</p>
+					<p>As <code>.com</code>, <code>.net</code>, and <code>.org</code> use isn't restricted, they are used more flexibly than as originally intended.</p>
 				</section>
 
 				<section>
-					<h2>DNS</h2>
-					<p>Domain Name System: Translates domain names into the IP addresses that allow machines to communicate with one another.</p>
-					<p>Look up Google's IP address by typing <br/><code>nslookup girldevelopit.com</code>.</p>
+					<h2>Domain Name System (DNS)</h2>
+					<p>Translates domain names into the IP addresses that allow machines to communicate with one another.</p>
+					<p>Look up GDI's IP address by typing into Terminal (Mac) or Command Prompt (PC): <br/><code>nslookup girldevelopit.com</code>.</p>
 				</section>
 
 				<section>
@@ -230,27 +220,27 @@
 						<li>Allows transfer of names to other registrar</li>
 						<li>ICANN Accredited</li>
 					</ul>
-					<p>Popular registrars: GoDaddy, NameCheap, Google Apps</p>	
+					<p>Popular registrars: <a href="https://www.godaddy.com" target="_blank">GoDaddy</a>, <a href="https://www.namecheap.com" target="_blank">NameCheap</a>, <a href="https://apps.google.com" target="_blank">Google Apps</a></p>
 				</section>
 
                 <section>
                     <h3>Home and daily life of a web site</h3>
                     <p class="left-align">A typical website lives on a web server. Web servers are often large computers connected to a network.</p>
-                    <ul>
+                    <ol>
                         <li class="fragment">Type a web address into the address bar</li>
                         <li class="fragment">DNS connects you to the hosting server</li>
                         <li class="fragment">Files are then sent back to your computer for display</li>
                         <li class="fragment">Sometimes code must be compiled before being sent back to you.</li>
-                    </ul>
+                    </ol>
                 </section>
 
                 <section>
-                    <h3>Example: twitter</h3>
+                    <h3>Example: Twitter</h3>
                     <div style="width: 100%; ">
                         <img src="image/browser-request.png" alt="" />
                     </div>
                 </section>
-                
+
 				<section>
 					<h1>THE END</h1>
 					<h3>Mary Ann & Truc</h3>
