Moved Start Git exercise into its own page
Also cleaned up some broken anchors.

--- a/github.html
+++ b/github.html
@@ -230,16 +230,11 @@ git status
   git commit -m "First commit. Added hello world to repository."
             </code></pre>
           </section>
-
-          <section>
-          <h2>Exercise!</h2>
-          <ol>
-            <li>Create your own repo.</li>
-            <li>Commit pages/content from Day 1.</li>
-            <li>Push into repo.</li>
-          </ol>
-        </section>
       </section>
+
+          <section data-background="#f05b62">
+            <h2><a style="color: #ffffff;" href="exercises/start_git/start_git_instructions.html" target="_blank">Exercise: Manage Your Code With Git</a></h2>
+          </section>
 
     <section>
         <section data-background="#f05b62">
@@ -333,17 +328,17 @@ git checkout version2
             <h3>Forking</h3>
             <h4>Clone -  to get a local repository of your fork</h4>
             <pre><code data-trim class ="command-line">
-cd ../
+              cd ../
 
-git clone https://github.com/username/FORKED-REPO-NAME.git
+              git clone https://github.com/username/FORKED-REPO-NAME.git
 
-cd FORKED-REPO-NAME
+              cd FORKED-REPO-NAME
 
-git remote add upstream https://github.com/original-username/FORKED-REPO-NAME.git
-# Assigns the original repository to a remote called "upstream"
+              git remote add upstream https://github.com/original-username/FORKED-REPO-NAME.git
+              # Assigns the original repository to a remote called "upstream"
 
-git fetch upstream
-# Pulls in changes not present in your local repository, without modifying your files
+              git fetch upstream
+              # Pulls in changes not present in your local repository, without modifying your files
             </code></pre>
           </section>
         </section>
@@ -368,11 +363,11 @@ git fetch upstream
       </section>
       <section>
         <h3>Start Pull Request</h3>
-        <img src = "image/start-pr-desktop.png" alt ="How to initiate a pull request. Image from https://help.github.com/articles/using-pull-requests"/>
+        <img src="image/start-pr-desktop.png" alt ="How to initiate a pull request. Image from https://help.github.com/articles/using-pull-requests"/>
       </section>
       <section>
         <h3>Managing pull requests</h3>
-         <p>How to manage pull requests is out of the scope of this short workshop, learn more at <a href = "https://help.github.com/categories/collaborating-on-projects-using-issues-and-pull-requests/ ="_blank" alt = "Links to tutorials on pull requests and collaboration">Github Collaboration Tutorials</a>
+         <p>How to manage pull requests is out of the scope of this short workshop, learn more at <a href = "https://help.github.com/categories/collaborating-on-projects-using-issues-and-pull-requests" target="_blank" alt="Links to tutorials on pull requests and collaboration">Github Collaboration Tutorials</a>
       </section>
 
 
